objects/PurchaseOrderLineItem__c/PurchaseOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Line Item</label>
    <nameField>
        <displayFormat>POL-{0000000}</displayFormat>
        <label>Purchase Order List No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>