objects/PurchaseOrderLineItem__c/fields/Last_Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Last_Received_Quantity__c</fullName>
    <label>Last Received Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>