objects/PurchaseOrderLineItem__c/fields/LineDelDate__c.field-meta.xml
<CustomField>
    <fullName>LineDelDate__c</fullName>
    <label>LineDelDate</label>
    <type>Date</type>
</CustomField>