objects/PurchaseOrderLineItem__c/fields/LineDescription__c.field-meta.xml
<CustomField>
    <fullName>LineDescription__c</fullName>
    <label>LineDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>