objects/PurchaseOrderLineItem__c/fields/Non_Stock__c.field-meta.xml
<CustomField>
    <fullName>Non_Stock__c</fullName>
    <formula>Product__r.Non_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Stock</label>
    <type>Checkbox</type>
</CustomField>