objects/PurchaseOrderLineItem__c/fields/POWarehouse__c.field-meta.xml
<CustomField>
    <fullName>POWarehouse__c</fullName>
    <label>POWarehouse</label>
    <length>20</length>
    <type>Text</type>
</CustomField>