objects/PurchaseOrderLineItem__c/fields/Received_Quantity_Price__c.field-meta.xml
<CustomField>
    <fullName>Received_Quantity_Price__c</fullName>
    <formula>Last_Received_Quantity__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Quantity Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>