objects/PurchaseOrderLineItem__c/fields/Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Quantity__c</fullName>
    <formula>Quantity__c- Total_Received_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>