objects/PurchaseOrderLineItem__c/fields/Total_Received_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Received_Quantity__c</fullName>
    <label>Total Received Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>